fix: Improper left horizontal alignment in dispensing dashboard

--- a/src/pharmacy-header/pharmacy-header.scss
+++ b/src/pharmacy-header/pharmacy-header.scss
@@ -15,7 +15,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin-left: 0.75rem;
+  margin-left: 1rem;
 }
 
 .right-justified-items {
